created login and user controllers, authentication/authirization work, not connected to database, problem with role claim

--- a/Hospital/Hospital/appsettings.json
+++ b/Hospital/Hospital/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=1102;Database=HospitalFirstTry;"
+    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=zoz00lka;Database=HospitalDB;"
+  },
+  "Jwt" : {
+    "Key" : "B2w1WYwM2tVEfPRlXm8WZamHYNYRi13F" ,
+    "Issuer" : "http://localhost:5075",
+    "Audience" : "http://localhost:5075"
+    
   }
 }
