--- a/Hospital/Hospital/appsettings.json
+++ b/Hospital/Hospital/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=1102;Database=HospitalFirstTry;"
+    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=1102;Database=HospitalFirstTry;",
+    "HospitalContext": "server=localhost;username=postgres;database=HospitalContext-2ea477ea-4d5e-4092-a960-e7eab9567ca7"
   }
 }
