--- a/Hospital/Hospital/appsettings.json
+++ b/Hospital/Hospital/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=1102;Database=HospitalFirstTry;",
-    "HospitalContext": "server=localhost;username=postgres;database=HospitalContext-2ea477ea-4d5e-4092-a960-e7eab9567ca7"
+    "HospitalContext": "server=localhost;username=postgres;database=HospitalContext-2ea477ea-4d5e-4092-a960-e7eab9567ca7",
+    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=zoz00lka;Database=HospitalDB;"
+  },
+  "Jwt" : {
+    "Key" : "B2w1WYwM2tVEfPRlXm8WZamHYNYRi13F" ,
+    "Issuer" : "http://localhost:5075",
+    "Audience" : "http://localhost:5075"
   }
 }
