--- a/Hospital/Hospital/appsettings.json
+++ b/Hospital/Hospital/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=1102;Database=HospitalDB;"
+    "HospitalDB": "Server=localhost;Port=5432;User Id=postgres;Password=superuser;Database=HospitalFirstTry;"
   },
   "Jwt" : {
     "Key" : "B2w1WYwM2tVEfPRlXm8WZamHYNYRi13F" ,
