--- a/Hospital/Hospital/Hospital.csproj
+++ b/Hospital/Hospital/Hospital.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
+
 </Project>
